# CForge

./: .gitignore  .gitmodules  CMakeLists.txt
IR_BUILD/: output.json
emulator/: main.cpp
src/: assembler.cpp  assembler.h  assembler.hpp  error.hpp  instruction_set.cpp  instruction_set.hpp  ir_parser.cpp  ir_parser.hpp  linker.cpp  linker.hpp  main.cpp  prog.s  types.hpp
